fix(desktop/fileio): 修复JCEF桥接器对增补字符的传输bug
移除了无用的Emoji Fallback字体配置，通过base64编码绕过JCEF对U+10000以上字符的传输问题，统一前后端文件编解码逻辑